# simple-arbitrage-rs

./: .gitignore  Cargo.toml  README.md  build.rs  expand.rs  package.json  remappings.txt
src/: addresses.rs  crossed_pair.rs  dex_factory.rs  lib.rs  main.rs  uniswap.rs  uniswap_pair.rs  uniswap_pairs.rs
src/bindings/: arbitrage_swap.rs  context.rs  ds_test.rs  erc20.rs  flash_bots_uniswap_query.rs  i_uniswap_v2_callee.rs  i_uniswap_v2_factory.rs  i_uniswap_v2_pair.rs  i_uniswap_v2_router_01.rs  i_uniswap_v2_router_02.rs  i_uniswap_v2erc20.rs  ierc20.rs  ierc20_metadata.rs  iweth.rs  iweth9.rs  math.rs  mod.rs  safe_math.rs  t_token.rs  test_wrapper.rs  transfer_helper.rs  uniswap_v2_factory.rs  uniswap_v2_library.rs  uniswap_v2_pair.rs  uniswap_v2_router.rs  uniswap_v2_router_02.rs  uniswap_v2erc20.rs  uq11_2x_112.rs  weth9.rs  wrapper.rs
src/contracts/: ArbitrageSwap.sol  TToken.sol  UniswapFlashQuery.sol  UniswapV2Pair.sol  WETH9.sol  Wrapper.sol  Wrapper.t.sol
src/contracts/interfaces/: IUniswapV2Factory.sol
tests/: common.rs  simulation.rs
