[package]
name = "forge-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
dotenv = "0.15.0"
serde_json = "1.0"
futures = "0.3.19"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
itertools = "0.10.2"
